--- a/headphones/6-styles.css
+++ b/headphones/6-styles.css
@@ -180,6 +180,18 @@ button:hover {
   flex-wrap: wrap;
 }
 
+.pentagon {
+  width: 180px;
+  height: 170px;
+  background: #FF6565;
+  clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+  position: relative;
+}
+
 .result-main > div {
   display: flex;
   flex-direction: column;
